--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@angular/service-worker": "~10.0.14",
+    "@angular/youtube-player": "^9.1.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "domsanitizer": "^0.2.3",
     "material-tooltip": "^1.0.1",
     "ng2-charts": "^2.4.2",
     "ng5-slider": "^1.2.6",
