--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "esModuleInterop": true,
     "target": "es2015",
     "lib": [
       "es2018",
