--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/service-worker": "~10.0.14",
     "@angular/youtube-player": "^9.1.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@uploadcare/upload-client": "^3.1.1",
     "angular-alert-module": "^2.0.3",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.4",
@@ -41,6 +42,7 @@
     "ngx-pagination": "^5.1.1",
     "ngx-quill": "^13.0.0",
     "ngx-toastr": "^13.2.1",
+    "ngx-uploadcare-widget": "^2.0.2",
     "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
     "rxjs": "~6.5.5",
